--- a/package.json
+++ b/package.json
@@ -3,100 +3,101 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "express": "^4.13.3",
-    "morgan": "~1.6.1",
-    "body-parser": "^1.14.2",
+    "express": "^4.13.4",
+    "morgan": "~1.7.0",
+    "body-parser": "^1.15.0",
     "method-override": "^2.3.5",
     "cookie-parser": "^1.4.1",
     "express-session": "^1.13.0",
-    "errorhandler": "^1.4.2",
-    "compression": "^1.6.0",
+    "errorhandler": "^1.4.3",
+    "compression": "^1.6.1",
     "composable-middleware": "^0.3.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.6.1",
     "lusca": "^1.3.0",
-    "babel-runtime": "^6.3.19",
-    "ejs": "^2.3.4",
-    "mongoose": "^4.3.5",
+    "babel-runtime": "^6.6.1",
+    "ejs": "^2.4.1",
+    "mongoose": "^4.4.7",
     "connect-mongo": "^1.1.0",
-    "jsonwebtoken": "^5.5.4",
+    "jsonwebtoken": "^5.7.0",
     "express-jwt": "^3.3.0",
     "passport": "~0.3.2",
     "passport-local": "^1.0.0",
-    "passport-google-oauth": "~0.2.0",
-    "socket.io": "^1.4.4",
-    "socket.io-client": "^1.4.4",
-    "socketio-jwt": "^4.3.3",
+    "passport-google-oauth": "~1.0.0",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
+    "socketio-jwt": "^4.3.4",
     "serve-favicon": "^2.3.0",
     "kerberos": "~0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.2.3",
-    "babel-core": "^6.4.0",
-    "grunt": "~0.4.5",
-    "grunt-wiredep": "^2.0.0",
-    "grunt-concurrent": "^2.1.0",
-    "grunt-contrib-clean": "~0.7.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-imagemin": "~1.0.0",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "karma-babel-preprocessor": "^6.0.1",
-    "grunt-babel": "~6.0.0",
-    "grunt-google-cdn": "~0.4.3",
-    "grunt-jscs": "^2.6.0",
-    "grunt-newer": "^1.1.1",
-    "grunt-ng-annotate": "^1.0.1",
-    "grunt-ng-constant": "^1.1.0",
-    "grunt-filerev": "^2.3.1",
-    "grunt-usemin": "^3.1.1",
-    "grunt-env": "~0.4.4",
-    "grunt-node-inspector": "^0.4.1",
-    "grunt-nodemon": "^0.4.1",
-    "grunt-angular-templates": "^0.5.9",
-    "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^3.0.0",
-    "grunt-injector": "^0.6.1",
-    "grunt-karma": "~0.12.1",
-    "grunt-build-control": "^0.6.2",
-    "grunt-contrib-sass": "^0.9.2",
-    "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.3.0",
-    "grunt-express-server": "^0.5.1",
-    "grunt-postcss": "~0.7.1",
-    "grunt-open": "~0.2.3",
-    "open": "~0.0.5",
-    "jshint-stylish": "~2.1.0",
-    "connect-livereload": "^0.5.4",
-    "mocha": "^2.3.4",
-    "grunt-mocha-test": "~0.12.7",
-    "grunt-mocha-istanbul": "^3.0.1",
-    "istanbul": "~0.4.2",
-    "chai": "^3.4.1",
-    "sinon": "^1.17.2",
+    "autoprefixer": "^6.3.3",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "chai-things": "^0.2.0",
-    "sinon-chai": "^2.8.0",
+    "connect-livereload": "^0.5.4",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "^1.0.3",
+    "grunt-babel": "~6.0.0",
+    "grunt-build-control": "^0.6.3",
+    "grunt-concurrent": "^2.2.1",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "~1.0.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "~1.0.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-env": "~0.4.4",
+    "grunt-express-server": "^0.5.2",
+    "grunt-filerev": "^2.3.1",
+    "grunt-google-cdn": "~0.4.3",
+    "grunt-injector": "^0.6.1",
+    "grunt-jscs": "^2.8.0",
+    "grunt-karma": "~0.12.1",
+    "grunt-mocha-istanbul": "^3.0.1",
+    "grunt-mocha-test": "~0.12.7",
+    "grunt-newer": "^1.1.2",
+    "grunt-ng-annotate": "^2.0.1",
+    "grunt-ng-constant": "^2.0.1",
+    "grunt-node-inspector": "^0.4.1",
+    "grunt-nodemon": "^0.4.1",
+    "grunt-open": "~0.2.3",
+    "grunt-postcss": "~0.8.0",
+    "grunt-protractor-runner": "^3.0.0",
+    "grunt-usemin": "^3.1.1",
+    "grunt-wiredep": "^2.0.0",
+    "istanbul": "~0.4.2",
     "jasmine-core": "^2.4.1",
-    "karma-jasmine": "~0.3.6",
     "jasmine-spec-reporter": "^2.4.0",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.7",
-    "karma-script-launcher": "~0.1.0",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "~2.1.0",
+    "karma": "~0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "~0.2.2",
-    "requirejs": "~2.1.22",
-    "karma-requirejs": "~0.2.3",
+    "karma-firefox-launcher": "~0.1.7",
     "karma-jade-preprocessor": "0.0.11",
-    "phantomjs": "^1.9.19",
-    "karma-phantomjs-launcher": "~0.2.3",
-    "karma": "~0.13.19",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
-    "karma-spec-reporter": "~0.0.23",
-    "proxyquire": "^1.7.3",
-    "supertest": "^1.1.0",
-    "babel-preset-es2015": "^6.3.13"
+    "karma-jasmine": "~0.3.7",
+    "karma-ng-html2js-preprocessor": "~0.2.1",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-requirejs": "~0.2.5",
+    "karma-script-launcher": "~0.2.0",
+    "karma-spec-reporter": "~0.0.24",
+    "mocha": "^2.4.5",
+    "open": "~0.0.5",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.5",
+    "proxyquire": "^1.7.4",
+    "requirejs": "~2.1.22",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "supertest": "^1.2.0",
+    "time-grunt": "^1.3.0"
   },
   "engines": {
     "node": "^4.2.3",
